# Fabian-rtech

./: .gitmodules  README.md
src/: mymap.pgm
src/beginner_tutorials/: CMakeLists.txt  package.xml
src/beginner_tutorials/launch/: turtlemimic.launch
src/beginner_tutorials/src/: add_two_ints_client.cpp  add_two_ints_server.cpp
src/dual_manipulator/: CMakeLists.txt  package.xml
src/dual_manipulator/urdf/: two_sia5d.xacro  two_sia5d_ur5.xacro
src/dual_manipulator_moveit_config/: .setup_assistant  package.xml
src/dual_manipulator_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  motoman_sia5d.srdf  ompl_planning.yaml  ros_controllers.yaml
src/dual_manipulator_moveit_config/launch/: planning_context.launch
src/dual_sia5_moveit_config/: .setup_assistant  package.xml
src/dual_sia5_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  motoman_sia5d.srdf  ompl_planning.yaml  ros_controllers.yaml
src/dual_sia5_moveit_config/launch/: moveit.rviz  planning_context.launch
src/final_exam/: .~lock.final_exam-readme.odt#  CMakeLists.txt  final_exam-readme.odt  package.xml
src/final_exam/launch/: r2d2_movecontrol.launch
src/final_exam/src/: move_client.cpp  move_server.cpp
src/motoman_sia5d_moveit_config/: .setup_assistant  package.xml
src/motoman_sia5d_moveit_config/src/: trianglepath_sia5d.cpp
src/my_r2d2/: package.xml
src/my_r2d2/config/: r2d2.rviz
src/my_r2d2/launch/: ar_tracker.launch  r2d2.launch  (+1 more)
src/planning_tutorial/: CMakeLists.txt  package.xml
src/range_visualizer/: CMakeLists.txt  package.xml
(+14 files in other folders)
